Fixes #249 Make about text more readable

--- a/public/assets/css/compiled/app.css
+++ b/public/assets/css/compiled/app.css
@@ -7985,14 +7985,17 @@ footer.sticky {
 
 #about_panel {
   display: none;
-  border: solid 1px #c3c3c3;
   position: relative;
-  background-color: rgba(176, 220, 220, 0.4);
 }
 
-#about_panel p {
+#about_panel .about_content {
+  background-color: rgba(243, 243, 243, 0.4);
+  margin: 0 15px;
+}
+
+#about_panel .about_content p {
   font-size: larger;
-  padding: 20px;
+  text-align: left;
 }
 
 #about_panel .close_about:hover {
